2005-05-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (main): make sure --psfonts warning is correct.

2005-05-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely, advanced-notation.itely,
	basic-notation.itely, instrument-notation.itely, global.itely,
	introduction.itely, tutorial.itely: rearranging, editing,
	clean-up.

	* mf/GNUmakefile: change a "make -C" to "${MAKE} -C", required
	for compiling on FreeBSD.

2005-05-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pfb.cc (LY_DEFINE): progress indication for opening ttf and
	otf files.

	* input/mutopia/E.Satie/petite-ouverture-a-danser.ly (lower):
	bugfixes.

	* VERSION: 2.5.26 released.

	* scm/titling.scm (marked-up-headfoot): revert Pedro's patch. 

2005-05-25  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/titling.scm (marked-up-headfoot): doesn't print pagenumbers
	if printpagenumber is false.

2005-05-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-config.cc (init_fontconfig): comment out FontConfig
	cache warning.

	* lily/tie.cc (print): support dotted ties.
	
2005-05-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): switch off
	debugging
	(all-grob-descriptions): Arpeggio has Y-extent.

	* scm/define-music-properties.scm (all-music-properties): document
	length-callback and start-callback as "read-only".

	* scm/music-functions.scm (unfold-repeats): rewrite. Cannot set
	length-callback after creation. 

	* scripts/convert-ly.py (conv): unfoldrepeats -> unfoldRepeats,
	compressmusic -> compressMusic.

	* ly/music-functions-init.ly (oldaddlyrics): idem.

	* lily/parser.yy: NewLyricCombineMusic ->
	LyricCombineMusic. LyricCombineMusic -> OldLyricCombineMusic.

2005-05-24  Pedro Kroger  <kroeger@pedrokroeger.net>

	* ly/Welcome_to_LilyPond.ly: typo.

2005-05-24  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely: move changing-defaults to be
	before global issues.
